# wiggle

./: .gitignore  README.md  check.py  cherry1.sh  cherry1_db.sh  cherry1b.sh  cherry2.sh  cherry2_db.sh  cherry2b.sh  cherry_2d_all.sh  cherry_2d_all_autonoise.sh  cherry_2d_all_extreme.sh  cherry_2d_all_small.sh  cherry_2d_aug.sh  cherry_2d_basic.sh  cherry_2d_deconv.sh  cherry_2d_otsu.sh  cherry_3d_all.sh  cherry_3d_all_autonoise.sh  cherry_3d_all_small.sh  cherry_3d_aug.sh  cherry_3d_aug_interp.sh  cherry_3d_basic.sh  cherry_3d_basic_half.sh  cherry_3d_basic_noresize.sh  cherry_3d_contrast_small.sh  cherry_3d_deconv_noresize.sh  cherry_3d_deconv_small.sh  cherry_3d_extreme_all_small.sh  cherry_3d_extreme_small.sh  cherry_3d_megaextreme_all_small.sh  cherry_count.sh  cherry_graph.sh  cherry_mask.sh  cherry_stack.sh  cherry_stack_missing.sh  cherry_three.sh  create_dataset.sh  flatten.sh  generate_csv.sh  (+6 more)
holly/: math.py  unet_stats.py
holly/net/: guru.py  model_parts.py  unet.py
holly/util/: image_unet.py  loadsave_unet.py  plyobj.py
images/: PSF.tif  PSF3.tif  PSF_born_wolf_3d.tif  test_2d_luminance_u16.tif  test_2d_rgb_u8.tif  worm3d.tif
include/: basemodel.hpp  data.hpp  image.hpp  multiset.h  multiset.hpp  options.hpp  pipe.hpp  roi.hpp  rots.hpp  threadpool.hpp  volume.hpp
scripts/: datafiles.py  genpairs.py  otsu.py  retrofit.py  stats.py  viz.py
src/: basemodel.cpp  count.cpp  data.cpp  dataset.cc  dataset.cpp  db.cpp  flatten.cc  flatten.cpp  fluro.cc  fluro.cpp  graph.cpp  image.cpp  main.cc  mask.cpp  multiset.cc  multiset.cpp  noaug.cpp  process.cpp  roi.cc  roi.cpp  single.cpp  solange.cc  solver.cpp  stack.cc  stack.cpp  three.cpp  volume.cpp  wiggle.cpp
src/lib/: data.cpp  image.cpp  pipe.cpp  roi.cpp  rots.cpp
src/test/: add_cuda  basemodel.cpp  basic.cpp  cuda  cuda.cu  deconv.cpp  deconv_stack.cpp  pwdt.cpp  roi.cc  roi.cpp  rotaug.cpp
test/: deconv.py  denoise.py
